--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -356,7 +356,7 @@
 <div style="min-width: 400px;">
                 <div class="mt-1" style=" min-height: 20px">
                     <div class="preload comic-neue" style="">
-                        <span class="subtitle poppins fw-light text-white">the people』s</span>
+                        <span class="subtitle poppins fw-light text-white">the people’s</span>
                         <span class="preload__letter subtitle poppins fw-light text-white">c</span>
                         <span class="preload__letter subtitle poppins fw-light text-white">r</span>
                         <span class="preload__letter subtitle poppins fw-light text-white">y</span>
