--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 </style>
               <div style="position: relative; z-index: 69;">
-                    <a href="https://github.com/dogecoin/dogecoin/releases/" target="_blank"><div class="sbbox sbleft comic-neue">狗狗幣核心錢包1.14.6版本發佈了！大更新，快來吧！</div></a>
+                    <div class="sbbox sbleft comic-neue">TO THE MOON！</div>
                     <img class="dogelogo" src="/assets/images/doge.svg" alt="Doge" onclick="document.querySelector('#ShootingDoges').style.display = 'flex';" />
                 <h1 class="d_text_display d_span_opacity comic-neue"><span id="dynamic_d">D</span>OGECOIN</h1>
                </div>
