--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
       </div>
       <div class="row pb-5">
         <div class="col-lg-6">
-          <div class="ratio ratio-16x9"><a href="https://www.youtube.com/embed/_KVZmS_UO5I" target="_blank"><img src="/assets/images/whatisdogecoin.jpg" /></a>
+          <div class="ratio ratio-16x9"><a href="https://youtu.be/s3NWyh8a5t0" target="_blank"><img src="/assets/images/whatisdogecoin.jpg" /></a>
           </div>
         </div>
         <div class="col-lg-6">
