--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 </style>
               <div style="position: relative; z-index: 69;">
-                    <div class="sbbox sbleft comic-neue">TO THE MOON！</div>
+                    <div class="sbbox sbleft comic-neue">DOGECOIN<br/>TO THE MOON！</div>
                     <img class="dogelogo" src="/assets/images/doge.svg" alt="Doge" onclick="document.querySelector('#ShootingDoges').style.display = 'flex';" />
                 <h1 class="d_text_display d_span_opacity comic-neue"><span id="dynamic_d">D</span>OGECOIN</h1>
                </div>
