--- a/index.html
+++ b/index.html
@@ -430,7 +430,8 @@
       </div>
       <div class="row pb-5">
         <div class="col-lg-6">
-          <div class="ratio ratio-16x9"><a href="https://youtu.be/s3NWyh8a5t0" target="_blank"><img src="/assets/images/whatisdogecoin.jpg" /></a>
+          <div class="ratio ratio-16x9">
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/s3NWyh8a5t0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-lg-6">
