--- a/index.html
+++ b/index.html
@@ -456,6 +456,14 @@
         <a href="https://discord.gg/dogecoin" target="_blank" class="col-lg-4">
           <div style="background-image: url(/assets/images/Discord_Logo.svg); background-size: 150px; background-position: center; background-repeat: no-repeat; padding: 10px; margin: 5px;" >&nbsp;</div>
         </a>
+		
+		<a href="https://discord.gg/QThQhxupnd" target="_blank" class="col-lg-4">
+          <div style="background-image: url(/assets/images/discord_CHT.png); background-size: 150px; background-position: center; background-repeat: no-repeat; padding: 10px; margin: 5px;" >&nbsp;</div>
+        </a>
+		
+		<a href="https://line.me/ti/g2/NpnRrLyLV2pF2JZ0vo1bRFQ2uVIk18NbwOXOCA?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank" class="col-lg-4">
+          <div style="background-image: url(/assets/images/line_CHT.png); background-size: 150px; background-position: center; background-repeat: no-repeat; padding: 10px; margin: 5px;" >&nbsp;</div>
+        </a>
 
 
     </div>
