--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link rel="canonical" href="/zh-tw/" />
 
 
-<title>狗狗幣 - 開源點對點的數字貨幣</title>
+<title>狗狗幣中文社群 - DOGECOIN 開放原始碼點對點的加密貨幣</title>
 
 
 
