--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@ Mining rewards - consisting of 10,000 Dogecoin per block …
                 <div class="logo">
                     <img src="/doge-logo.png" alt="Dogecoin logo" />
                     <div class="logo-labels">
-                        <div class="main-label footer-label comic-neue">DOGECOIN</div>
+                        <div class="main-label footer-label comic-neue">DOGECOIN.FAN 中文社群</div>
                     </div>
                 </div>
                 <p style="padding-top: 10px" class="comic-neue">柴犬是一種日本犬，在網絡上很受歡迎，形成了一種迷因，是狗狗幣的象徵。狗狗幣由Jackson Palmer和Shibetoshi Nakamoto創立。</p>
