--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <header id="header" class="header">
   <span class="header__inner">
-    <a href="/zh-tw" style="text-decoration: none;">
+    <a href="/" style="text-decoration: none;">
     <div class="logo navbar-brand">
         <img src="/assets/images/dogecoin-logo.png" alt="Dogecoin logo" />
     </div>
