--- a/fans/index.html
+++ b/fans/index.html
@@ -172,8 +172,8 @@
    3C11.5066 3 3 11.5066 3 22C3 32.4934 11.5066 41 22 41ZM7 22C7
    13.7157 13.7157 7 22 7V37C13.7157 37 7 30.2843 7 22Z"/>
  </svg>
-</span
-      > <div class="locale" style="margin-left: 0px; margin-right: 10px">
+</span> 
+	  	  
 <a href="/wallets/">
     <div class="current-locale">
       
@@ -687,8 +687,8 @@ $(function () {
 </script>
 <main class="dogepedia">
     <div class="title" style="color: #FFFFFF">
-      <h1>Wallets</h1>
-      <a href="#" onclick="history.back()" style="text-decoration: none">&lt; 返回 </a> — <b>Wallets</b></a>
+      <h1>狗狗幣粉絲</h1>
+      <a href="#" onclick="history.back()" style="text-decoration: none">&lt; 返回 </a> — <b>狗狗幣粉絲</b></a>
     </div>
       <div class="underline"></div>
 <section class="box">
