--- a/fans/index.html
+++ b/fans/index.html
@@ -696,7 +696,7 @@ $(function () {
   
   <div style="max-width: 1200px; margin: auto;background-color: #FFFFFF !important; padding: 15px; border-radius: 20px">
             <div class="alert alert-warning" role="alert" style="width: 100%">
-          <i class="fa-solid fa-triangle-exclamation"></i> <b>Disclaimer:</b> We have not performed any audits of the wallets listed below.
+          <i class="fa-solid fa-triangle-exclamation"></i> <b>公告:</b> 曾經透過影片推廣狗狗幣的粉絲都有資格列在此名單中。
         </div>
 <div class="dtsp-verticalContainer">
         <div class="dtsp-verticalPanes"></div>
@@ -705,13 +705,13 @@ $(function () {
 <thead>
   <tr bgcolor="#EEEEEE" style="font-weight: bold">
     <th style="text-align: center">Order</th>
-    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-wallet"></i> 錢包</th>
+    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-wallet"></i> 頻道名稱</th>
     <th style="text-align: center"><i class="fa-solid fa-gears"></i> OS</th>
     <th style="text-align: center"><i class="fa-solid fa-gears"></i> Type</th>
     <th style="text-align: center"><i class="fa-solid fa-gears"></i> Type</th>
     <th style="text-align: center"><i class="fa-solid fa-gears"></i> Features</th>
-    <th style="text-align: center; width: auto !important" class="datawidth"><i class="fa-solid fa-gears"></i> Features</th>
-    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-cloud-arrow-down"></i> 下載</th>
+    <th style="text-align: center; width: auto !important" class="datawidth"><i class="fa-solid fa-gears"></i> 推廣影片</th>
+    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-cloud-arrow-down"></i> 連結</th>
   </tr>
 </thead>
 
