--- a/fans/index.html
+++ b/fans/index.html
@@ -607,7 +607,7 @@ $(function () {
   
   <div style="max-width: 1200px; margin: auto;background-color: #FFFFFF !important; padding: 15px; border-radius: 20px">
             <div class="alert alert-warning" role="alert" style="width: 100%">
-          <i class="fa-solid fa-triangle-exclamation"></i> <b>公告:</b> 曾經透過影片推廣狗狗幣的粉絲都有資格列在此名單中。
+          <i class="fa-solid fa-triangle-exclamation"></i> <b>公告:</b> 曾經透過 Youtube 影片推廣狗狗幣的頻道都有資格列在此粉絲名單中，歡迎進社群提供相關資訊。
         </div>
 <div class="dtsp-verticalContainer">
         <div class="dtsp-verticalPanes"></div>
@@ -616,10 +616,10 @@ $(function () {
 <thead>
   <tr bgcolor="#EEEEEE" style="font-weight: bold">
     <th style="text-align: center">Order</th>
-    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-wallet"></i> 頻道名稱</th>
+    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-wallet"></i> 影片名稱</th>
 
-    <th style="text-align: center; width: auto !important" class="datawidth"><i class="fa-solid fa-gears"></i> 推廣影片</th>
-    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-cloud-arrow-down"></i> 連結</th>
+    <th style="text-align: center; width: auto !important" class="datawidth"><i class="fa-solid fa-gears"></i> 狗狗幣推廣影片</th>
+    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-cloud-arrow-down"></i> 頻道名稱</th>
   </tr>
 </thead>
     
