--- a/fans/index.html
+++ b/fans/index.html
@@ -385,10 +385,9 @@ table{
 <thead>
   <tr bgcolor="#EEEEEE" style="font-weight: bold">
     <th style="text-align: center">Order</th>
-    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-wallet"></i> 影片名稱</th>
-
+    
     <th style="text-align: center; width: auto !important" class="datawidth"><i class="fa-solid fa-gears"></i> 狗狗幣推廣影片</th>
-    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-cloud-arrow-down"></i> 頻道名稱</th>
+    <th style="text-align: center" data-priority="1"><i class="fa-solid fa-cloud-arrow-down"></i> 狗狗幣粉絲</th>
   </tr>
 </thead>
     
@@ -397,9 +396,7 @@ table{
     <td style="vertical-align: middle">
       1
       </td>
-    <td style="vertical-align: middle">
-      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/embed/eJkdql3mKlk" target="_blank" style="font-weight: bold; width: 100%;">幣佛 </a>
-      </td>
+
    
     <td>      
       <iframe width="560" height="315" src="https://www.youtube.com/embed/eJkdql3mKlk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
@@ -415,9 +412,7 @@ table{
     <td style="vertical-align: middle">
       2
       </td>
-    <td style="vertical-align: middle">
-      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/embed/eJkdql3mKlk" target="_blank" style="font-weight: bold; width: 100%;">【不能只有我看到】歡迎重返職場 少年股神 AKA 幣佛</a>
-      </td>
+
    
     <td>      
       <iframe width="560" height="315" src="https://www.youtube.com/embed/kQfjkyVdSYo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
