--- a/fans/index.html
+++ b/fans/index.html
@@ -376,7 +376,7 @@ table{
   
   <div style="max-width: 1200px; margin: auto;background-color: #FFFFFF !important; padding: 15px; border-radius: 20px">
             <div class="alert alert-warning" role="alert" style="width: 100%">
-          <i class="fa-solid fa-triangle-exclamation"></i> <b>公告:</b> 曾經透過 Youtube 影片推廣狗狗幣的頻道都有資格列在此粉絲名單中，歡迎進社群提供相關資訊。
+          <i class="fa-solid fa-triangle-exclamation"></i> <b>公告:</b> 曾經透過 Youtube 影片推廣狗狗幣的頻道都有資格列在此粉絲名單中，歡迎進狗狗幣中文社群提供相關資訊。
         </div>
 <div class="dtsp-verticalContainer">
         <div class="dtsp-verticalPanes"></div>
