--- a/fans/index.html
+++ b/fans/index.html
@@ -398,12 +398,12 @@ table{
       </td>
 
    
-    <td>      
+    <td style="vertical-align: middle">      
       <iframe width="560" height="315" src="https://www.youtube.com/embed/eJkdql3mKlk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
     </td>
 	
-    <td>
-      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://dogecoin.com" target="_blank" style="font-weight: bold; width: 100%;">埋料犬犬 </a>        
+    <td style="vertical-align: middle">
+      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/c/JamesPengTw" target="_blank" style="font-weight: bold; width: 100%;">埋料犬犬  James Peng</a>        
     </td>
     
   </tr>
@@ -414,12 +414,12 @@ table{
       </td>
 
    
-    <td>      
+    <td style="vertical-align: middle">      
       <iframe width="560" height="315" src="https://www.youtube.com/embed/kQfjkyVdSYo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
     </td>
 	
-    <td>
-      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://dogecoin.com" target="_blank" style="font-weight: bold; width: 100%;">埋料犬犬 </a>     
+    <td style="vertical-align: middle">
+      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/c/JamesPengTw" target="_blank" style="font-weight: bold; width: 100%;">埋料犬犬 James Peng</a>     
     </td>
     
   </tr>
