--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ Mining rewards - consisting of 10,000 Dogecoin per block …
     </div>
     
       <a
-        href="/dogepedia/"
+        href="https://dogecoin.com/"
         class="text-decoration-none comic-neue"
         >
     <button class="dogepedia-button rounded-pill" style="width: 200px; height: 60px; font-size: 18px; top: 4vh !important">
@@ -1044,7 +1044,7 @@ Mining rewards - consisting of 10,000 Dogecoin per block …
                 <p class="card-text comic-neue">
                   瞭解關於狗狗幣IP的常見問題。
                 </p>
-                <a href="trademarks/" class="comic-neue">點擊查看 -></a>
+                <a href="https://dogecoin.com/" class="comic-neue">點擊查看 -></a>
               </div>
             </div>
           </div>
@@ -1145,11 +1145,11 @@ Mining rewards - consisting of 10,000 Dogecoin per block …
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">法律聲明</a>
-                    <li><a href="/terms" >條款</a></li><li><a href="/legal" >隱私政策</a></li><li><a href="/trademarks" >商標</a></li>
+                    <li><a href="#" >條款</a></li><li><a href="#" >隱私政策</a></li><li><a href="#" >商標</a></li>
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">網站地圖</a>
-                <li><a href="/">主頁</a></li><li><a href="/#what-is-dogecoin">狗狗幣是什麼</a></li><li><a href="/fans/">狗狗幣粉絲</a></li><li><a href="/#community">社群</a></li><li><a href="/dogepedia/">狗狗百科</a></li>
+                <li><a href="/">主頁</a></li><li><a href="/#what-is-dogecoin">狗狗幣是什麼</a></li><li><a href="/fans/">狗狗幣粉絲</a></li><li><a href="/#community">社群</a></li>
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">基金會</a>
