--- a/fans/index.html
+++ b/fans/index.html
@@ -442,11 +442,11 @@ table{
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">法律聲明</a>
-                    <li><a href="/terms" >條款</a></li><li><a href="/legal" >隱私政策</a></li><li><a href="/trademarks" >商標</a></li>
+                    <li><a href="#" >條款</a></li><li><a href="#" >隱私政策</a></li><li><a href="#" >商標</a></li>
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">網站地圖</a>
-                <li><a href="/">主頁</a></li><li><a href="/#what-is-dogecoin">狗狗幣是什麼</a></li><li><a href="/fans/">中文粉絲</a></li><li><a href="/#community">社區</a></li><li><a href="/dogepedia/">狗狗百科</a></li>
+                <li><a href="/">主頁</a></li><li><a href="/#what-is-dogecoin">狗狗幣是什麼</a></li><li><a href="/fans/">中文粉絲</a></li><li><a href="/#community">社區</a></li>
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">基金會</a>
