--- a/fans/index.html
+++ b/fans/index.html
@@ -413,6 +413,22 @@ table{
     </td>
     
   </tr>
+  
+      <tr>
+    <td style="vertical-align: middle">
+      3
+      </td>
+
+   
+    <td style="vertical-align: middle">      
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z9Cr_TcnCWI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </td>
+	
+    <td style="vertical-align: middle">
+      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/channel/UC0ALN3vlHABRvXA9Li0mPCg" target="_blank" style="font-weight: bold; width: 100%;">教主Doctor Lord</a>     
+    </td>
+    
+  </tr>
 
     <tfoot></tfoot>
 </table>
