--- a/fans/index.html
+++ b/fans/index.html
@@ -514,6 +514,23 @@ table{
   
   
   
+         <tr>
+    <td style="vertical-align: middle">
+      8
+      </td>
+
+   
+    <td style="vertical-align: middle">      
+ 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1zhhoi-VImw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 
+    </td>
+	
+    <td style="vertical-align: middle">
+      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/channel/UCEEti1zi_UMJkkljaYDrvEA" target="_blank" style="font-weight: bold; width: 100%;">曲辉</a>     
+    </td>
+    
+  </tr>
   
 
     <tfoot></tfoot>
