--- a/fans/index.html
+++ b/fans/index.html
@@ -533,12 +533,28 @@ table{
     </td>
     
   </tr>
-  
+            <tr>
+    <td style="vertical-align: middle">
+      9
+      </td>
+
+   
+    <td style="vertical-align: middle">      
+ 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Hp0xzBIhyGY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 
+    </td>
+	
+    <td style="vertical-align: middle">
+      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/channel/UCP3xCRQpNun9yE5Y9q7U5FA" target="_blank" style="font-weight: bold; width: 100%;">宝二爷</a>     
+    </td>
+    
+  </tr>
   
   
           <tr>
     <td style="vertical-align: middle">
-      9
+      10
       </td>
 
    
