--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link rel="canonical" href="/" />
 
 
-<title>狗狗幣中文社群 - DOGECOIN 開放原始碼點對點的加密貨幣</title>
+<title>狗狗幣中文社群 - Dogecoin Fans</title>
 
 
 
