--- a/fans/index.html
+++ b/fans/index.html
@@ -671,7 +671,7 @@ table{
                         <div class="main-label footer-label comic-neue">DOGECOIN</div>
                     </div>
                 </div>
-                <p style="padding-top: 10px" class="comic-neue">柴犬是一種日本犬，在網絡上很受歡迎，形成了一種迷因，是狗狗幣的象徵。狗狗幣由Jackson Palmer和Shibetoshi Nakamoto創立。</p>
+                <p style="padding-top: 10px" class="comic-neue">柴犬是一種日本犬，在網路上很受歡迎，形成了一種迷因，是狗狗幣的象徵。狗狗幣由Jackson Palmer和Shibetoshi Nakamoto創立。</p>
             </div>
             <div class="footer-column">
                 <a class="footer-title comic-neue-bold">法律聲明</a>
