--- a/fans/index.html
+++ b/fans/index.html
@@ -8,17 +8,17 @@
 <meta name="keywords" content="狗狗幣, doge, 貨幣, 加密貨幣, 數字貨幣, 柴犬" />
 <meta name="robots" content="noodp" />
 
-<meta property="og:image" content="https://dogecoin.com/assets/images/dogecoin-card.png"/>
+<meta property="og:image" content="https://dogecoin.fan/assets/images/dogecoin-card.png"/>
 <meta property="og:title" content="">
 <meta property="og:description" content="">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://dogecoin.com/">
+<meta property="og:url" content="https://dogecoin.fan/">
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="">
-<meta name="twitter:site" content="https://dogecoin.com/">
+<meta name="twitter:site" content="https://dogecoin.fan/">
 <meta name="twitter:description" content="">
-<meta name="twitter:image" content="https://dogecoin.com/assets/images/dogecoin-card.png">
+<meta name="twitter:image" content="https://dogecoin.fan/assets/images/dogecoin-card.png">
 
 <meta name="theme-color" content="" />
 <link rel="canonical" href="/wallets/" />
