--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
         <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="Dogecoin">
-<meta name="description" content=" 全世界狗狗愛好者們擁護的開源點對點數字貨幣 " />
+<meta name="description" content=" 全世界狗狗愛好者們擁護的開源點對點加密貨幣 " />
 <meta name="keywords" content="狗狗幣, doge, 貨幣, 加密貨幣, 數字貨幣, 柴犬 " />
 <meta name="robots" content="noodp" />
 
 <meta property="og:image" content="https://dogecoin.fan/assets/images/dogecoin-card.png"/>
-<meta property="og:title" content="Do Only Good Everyday">
-<meta property="og:description" content="Do Only Good Everyday">
+<meta property="og:title" content="狗狗幣中文社群 Do Only Good Everyday">
+<meta property="og:description" content="狗狗幣中文社群 Do Only Good Everyday">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://dogecoin.fan/">
 
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Do Only Good Everyday">
+<meta name="twitter:title" content="狗狗幣中文社群 Do Only Good Everyday">
 <meta name="twitter:site" content="https://dogecoin.fan/">
-<meta name="twitter:description" content="Do Only Good Everyday">
+<meta name="twitter:description" content="狗狗幣中文社群 Do Only Good Everyday">
 <meta name="twitter:image" content="https://dogecoin.fan/assets/images/dogecoin-card.png">
 
 <meta name="theme-color" content="" />
