--- a/fans/index.html
+++ b/fans/index.html
@@ -650,6 +650,26 @@ table{
     
   </tr>
 
+  <tr>
+    <td style="vertical-align: middle">
+      15
+      </td>
+
+   
+    <td style="vertical-align: middle">      
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Q623susZveI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </td>
+	
+    <td style="vertical-align: middle">
+      <img src="/assets/images/1.png" alt="Dogecoin Core" style="height: 30px;border-radius: 50%; display: inline-flex; margin-right: 20px"> <a href="https://www.youtube.com/channel/UCT2XxmbjoIdMrKbgNSm5Xgw" target="_blank" style="font-weight: bold; width: 100%;">WiseLee-Z 比特币行情分析</a>     
+    </td>
+    
+  </tr>
+
+
+
     <tfoot></tfoot>
 </table>
 </div>
